@@ -134,10 +134,11 @@ following names for their contribution to the product.
 * René Kijewski
 * Robert Treat
 * RockMFR
-* ST47
+* Salvatore Ingala
 * Scott Colcord
 * Simon Walker
 * Solitarius
+* ST47
 * Stefano Codari
 * Str4nd
 * svip
